--- a/css/style.css
+++ b/css/style.css
@@ -12232,3 +12232,68 @@ pre .code {
 .section-lg {
   padding: 100px 0 !important;
 }
+.message {
+  display: flex;
+  flex-direction: row;
+}
+
+.forms-sample {
+  display: flex;
+  flex-direction: column;
+  width: 35rem;
+  margin: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  gap: 30px;
+  padding: 1em;
+}
+
+.form-control {
+  display: block;
+  width: 90%;
+  padding: 0.875rem 1.375rem;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1;
+  color: #212529;
+  background-color: color(white);
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  appearance: none;
+  border-radius: 2px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-submit {
+  outline: 2px solid #B6922E;
+  color: #B6922E;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  width: 25%;
+}
+
+.btn-submit:hover {
+  background-color: #B6922E;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  color: #F5F5F5;
+}
+
+.show {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 35rem;
+  margin: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  gap: 30px;
+  padding: 1em;
+}
